== 0.13.5 2007-09-07

* rake tasks use rubyforge_username instead of RUBYFORGE_USERNAME constant

== 0.13.4 2007-09-07

* Running "newgem ." in a trunk, branches, or tags folder will look in parent folder for gem_name
* Added missing win_script.cmd for install_website generator [thx sutch]
* Upgrade rubigen == 1.0.4

== 0.13.3 2007-09-02

* Clean up newgem_gen usage statement
* website generated by default, -W to turn off, -w is no longer an option

== 0.13.2 2007-08-22

* Upgrade rubigen dependency to 1.0.3 to pushout upgrade

== 0.13.1 2007-08-22

* Re-release as there seemed to be an incorrect Rakefile in 0.13.0
* Added :newgem as a source for destroy script
* application_generator
  * test.rb passes APP_ROOT as parameter instead of a name, as APP_ROOT is already .../myproject
  * add BASE_DIRs for a clean list of required folders
* plain_theme_generator
  * Renamed from plain_generator

== 0.13.0 2007-08-20

* HIGHLIGHT - RubiGen integration - using a Rails-like generator
  * Now, each RubyGem has script/generate to access Rails-like generators too!!!
  * newgem can be run ontop of existing RubyGems and all is not destroyed!
  * Various included generators (application_generator, component_generator)
  * Website creation is now a generator, and is optionally included via newgem -w
  * Rspec support is now a generator, and is optionally included via newgem -t rspec
  * JRuby support is now a generator, and is optionally included via newgem -j
  * The Rakefile is now <5 lines - all config is in config/hoe.rb
* Generated gems:
  * Started to add jruby specific features (-j option)
    * Gems named xxx-1.2.3-jruby.gem
    * Includes: require 'java'
  * Add link to website for Using New Gem on Windows (without cygwin) [thx Jorge Cangas]
  * index.txt "email me" now refers to forum url as well
* NewGem
  * An error message is shown if Hoe gem isn't available when running rake on the gem
  * Lots of tasks refactored into /tasks folder
* How To UPGRADE