@@ -8,7 +8,12 @@ end
 desc 'Upload website files to rubyforge'
 task :website_upload do
   host = "#{rubyforge_username}@rubyforge.org"
-  remote_dir = "/var/www/gforge-projects/#{RUBYFORGE_PROJECT}/"
+  if RUBYFORGE_PROJECT == GEM_NAME
+    subdir = RUBYFORGE_PROJECT
+  else
+    subdir = RUBYFORGE_PROJECT + "/" + GEM_NAME
+  end
+  remote_dir = "/var/www/gforge-projects/#{subdir}/"
   local_dir = 'website'
   sh %{rsync -aCv #{local_dir}/ #{host}:#{remote_dir}}
 end
