@@ -1,3 +1,8 @@
+== TRUNK 2007-10-14
+
+* Update to docco for rubigen-based output [thx Noah Gibbs]
+* Fixed website dir location if gem name + project name differ [thx Noah Gibbs]
+
 == 0.13.5 2007-09-07
 
 * rake tasks use rubyforge_username instead of RUBYFORGE_USERNAME constant
